<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PracticalInfSchedules">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:id="@+id/general_state_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    app:cardBackgroundColor="@color/colorThird">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:layout_marginLeft="24dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginRight="24dp"
                        android:layout_marginBottom="12dp"
                        android:text="@string/practical_inf_state"
                        android:textSize="18sp"
                        app:fontFamily="@font/open_sans" />
                </android.support.v7.widget.CardView>

                <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:background="#CCA701" />

                <android.support.v7.widget.CardView
                    android:id="@+id/general_state"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:paddingLeft="24dp"
                        android:paddingTop="12dp"
                        android:paddingRight="24dp"
                        android:paddingBottom="12dp">

                        <ImageView
                            android:id="@+id/icon_bde_open"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:adjustViewBounds="false"
                            android:baselineAlignBottom="false"
                            app:srcCompat="@drawable/ic_open" />

                        <TextView
                            android:id="@+id/bde_text"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="2"
                            android:gravity="start|center_vertical"
                            android:paddingLeft="12dp"
                            android:text="@string/bde"
                            android:textColor="#979702"
                            android:textSize="18sp"
                            app:fontFamily="@font/open_sans" />

                        <ImageView
                            android:id="@+id/icon_scd_close"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/ic_close" />

                        <TextView
                            android:id="@+id/scd_text"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="3"
                            android:gravity="center|center_vertical"
                            android:text="@string/scd"
                            android:textColor="#FD0001"
                            android:textSize="18sp" />

                        <ImageView
                            android:id="@+id/icon_secretariat"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/ic_open" />


                        <TextView
                            android:id="@+id/secretariat_text"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:gravity="center|end"
                            android:text="@string/secretariat"
                            android:textColor="#979702"
                            android:textSize="18sp" />

                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:id="@+id/schedule_scd_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    app:cardBackgroundColor="@color/colorSecondary">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:layout_marginLeft="24dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginRight="24dp"
                        android:layout_marginBottom="12dp"
                        android:text="@string/schedule_scd_header"
                        android:textSize="18sp"
                        app:fontFamily="@font/open_sans" />
                </android.support.v7.widget.CardView>

                <View
                    android:id="@+id/divider2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:background="#00CCC7" />

                <android.support.v7.widget.CardView
                    android:id="@+id/schedule_scd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/schedule_scd_1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="24dp"
                            android:layout_marginTop="12dp"
                            android:layout_marginRight="24dp"
                            android:layout_marginBottom="12dp"
                            android:text="@string/schedule_scd_1"
                            android:textColor="#868686"
                            android:textSize="18sp"
                            app:fontFamily="@font/open_sans" />

                        <TextView
                            android:id="@+id/schedule_scd_2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="24dp"
                            android:layout_marginTop="12dp"
                            android:layout_marginRight="24dp"
                            android:layout_marginBottom="12dp"
                            android:text="@string/schedule_scd_2"
                            android:textColor="#868686"
                            android:textSize="18sp"
                            app:fontFamily="@font/open_sans" />
                    </LinearLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:id="@+id/schedule_secretariat_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    app:cardBackgroundColor="@color/colorThird">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:layout_marginLeft="24dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginRight="24dp"
                        android:layout_marginBottom="12dp"
                        android:text="@string/schedule_secretariat_header"
                        android:textSize="18sp"
                        app:fontFamily="@font/open_sans" />
                </android.support.v7.widget.CardView>

                <View
                    android:id="@+id/divider3"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:background="#CCA701" />

                <android.support.v7.widget.CardView
                    android:id="@+id/schedule_secretariat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/schedule_secretariat_1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="24dp"
                            android:layout_marginTop="12dp"
                            android:layout_marginRight="24dp"
                            android:layout_marginBottom="12dp"
                            android:text="@string/schedule_secretariat_1"
                            android:textColor="#868686"
                            android:textSize="18sp"
                            app:fontFamily="@font/open_sans" />

                        <TextView
                            android:id="@+id/schedule_secretariat_2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="24dp"
                            android:layout_marginTop="12dp"
                            android:layout_marginRight="24dp"
                            android:layout_marginBottom="12dp"
                            android:text="@string/schedule_secretariat_2"
                            android:textColor="#868686"
                            android:textSize="18sp"
                            app:fontFamily="@font/open_sans" />
                    </LinearLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>

            <android.support.v7.widget.CardView
                android:id="@+id/warning_schedule"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                app:cardBackgroundColor="#FF0000">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="12dp"
                    android:gravity="center"
                    android:text="@string/schedule_warning"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    app:fontFamily="@font/open_sans_semibold" />
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>